fix: adjust minor spacing issues & add icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,7 +86,7 @@
   }
 
   .splide__slide:hover {
-    @apply opacity-100 scale-105 transition-all duration-300 ease-in-out
+    @apply opacity-100 scale-105 transition-all duration-500 ease-in-out
   }
 
   .splide__arrows {
